# groovtube-hotkey

./: Cargo.toml  Info.plist  LICENSE  README.md  build-mac-universal.sh  build.rs
msi/: LICENSE.rtf  build.ps1  package.wxs
resources/: README.md  generate-icns.sh  generate-ico.sh  groovtube-hotkey.entitlements  icon.icns  resources.lib  resources.rc
src/: error.rs  lib.rs  resources.rs
src/config/: io.rs  mod.rs  types.rs
src/device/: connection.rs  constants.rs  mod.rs  types.rs
src/gui/: application.rs  executor.rs  mod.rs  open.rs  style.rs  types.rs
src/os/: macos.rs  mod.rs  windows.rs
src/sim/: breath_input_sim.rs  input_sim.rs  mod.rs  types.rs
