[package]
name = "groovtube-hotkey"
version = "1.0.0"
edition = "2021"
default-run = "groovtube-hotkey"

[dependencies]
btleplug = "0.10.5"
directories-next = "2.0.0"
enum-iterator = "1.4.1"
fd-lock = "3.0.12"
futures = "0.3.28"
iced = { version = "0.9.0", features = ["tokio"] }
iced_futures = "0.6.0"
iced_native = "0.10.3"
indexmap = "1.9.3"
msgbox = "0.7.0"
open = "4.1.0"
rdev = "0.5.2"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["fs", "sync", "macros", "io-util"] }
tokio-util = "0.7.8"
uuid = "1.3.3"
winapi = { version = "0.3.9", features = ["winuser", "wincon"] }

[build-dependencies]
image = "0.23"
