[package]
name = "groovtube-hotkey"
version = "1.2.0"
edition = "2021"
default-run = "groovtube-hotkey"

[dependencies]
btleplug = "0.11.1"
clap = { version = "4.4.6", features = ["derive"] }
directories-next = "2.0.0"
enum-iterator = "1.4.1"
fd-lock = "4.0.0"
futures = "0.3.28"
# disable the gpu renderer by disabling the default wgpu feature
iced = { version = "0.10.0", default-features = false, features = ["tokio"] }
iced_futures = "0.7.0"
indexmap = "2.0.2"
msgbox = "0.7.0"
open = "5.0.0"
rdev = "0.5.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["fs", "sync", "macros", "io-util"] }
tokio-util = "0.7.9"
uuid = "1.4.1"
winapi = { version = "0.3.9", features = ["winuser", "wincon"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
embed_plist = "1.2.2"

[build-dependencies]
image = "0.24.7"
