[package]
name = "groovtube-hotkey"
version = "1.3.1"
edition = "2021"
default-run = "groovtube-hotkey"

[dependencies]
btleplug = "0.11.1"
clap = { version = "4.4.6", features = ["derive"] }
directories-next = "2.0.0"
fd-lock = "4.0.0"
fern = { version = "0.6.2", default-features = false }
futures = "0.3.28"
humantime = "2.1.0"
# disable the gpu renderer by disabling the default wgpu feature
iced = { version = "0.12.1", default-features = false, features = ["tokio"] }
iced_futures = "0.12.0"
indexmap = "2.0.2"
log = "0.4.21"
msgbox = "0.7.0"
open = "5.0.0"
rdev = "0.5.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["fs", "sync", "macros", "io-util"] }
tokio-util = "0.7.9"
uuid = "1.4.1"
x509-parser = "0.16.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
embed_plist = "1.2.2"

[build-dependencies]
image = "0.25.1"
